; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_of_device_common.c_irq_of_parse_and_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_of_device_common.c_irq_of_parse_and_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.of_device = type { i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @irq_of_parse_and_map(%struct.device_node* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device_node*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.of_device*, align 8
  store %struct.device_node* %0, %struct.device_node** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.device_node*, %struct.device_node** %4, align 8
  %8 = call %struct.of_device* @of_find_device_by_node(%struct.device_node* %7)
  store %struct.of_device* %8, %struct.of_device** %6, align 8
  %9 = load %struct.of_device*, %struct.of_device** %6, align 8
  %10 = icmp ne %struct.of_device* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32, i32* %5, align 4
  %13 = load %struct.of_device*, %struct.of_device** %6, align 8
  %14 = getelementptr inbounds %struct.of_device, %struct.of_device* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp sge i32 %12, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %11, %2
  store i32 0, i32* %3, align 4
  br label %26

18:                                               ; preds = %11
  %19 = load %struct.of_device*, %struct.of_device** %6, align 8
  %20 = getelementptr inbounds %struct.of_device, %struct.of_device* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local %struct.of_device* @of_find_device_by_node(%struct.device_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
